--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : heonjung
-  image             : image/1.png
+  image             : image/my.jpg
   behance           : your_username
   dribbble          : your_username
   email             : sorcer7110@gmail.com
