--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -21,7 +21,7 @@
   description: 개발자
 
 
-- title: Software Engineer, KJ glovice
+- title: Software Engineer, goldenplanet
   from: 2020.09
   to: 2022.06
   description: 개발자
